# tanmatsu-launcher

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  generate_instructions.py  sdkconfig_mch2022  sdkconfig_tanmatsu
.github/workflows/: build-tanmatsu.yml  build.yml  release.yml
components/airplane_mode/: CMakeLists.txt  airplane_mode.c
components/airplane_mode/include/: airplane_mode.h
components/esp_hosted/: CMakeLists.txt
components/esp_hosted/host/: esp_hosted.h  esp_hosted_host_init.c
components/esp_hosted/host/drivers/transport/sdio/: sdio_drv.c
components/esp_hosted/host/port/esp/freertos/src/: sdio_wrapper.c
components/gui/: CMakeLists.txt  gui_edit_v2.c  gui_element_footer.c  gui_element_header.c  gui_element_icontext.c  gui_footer.c  gui_menu.c  gui_menu_render.c  idf_component.yml
components/gui/include/: gui_edit_v2.h  gui_element_icontext.h  gui_footer.h  gui_menu.h  gui_style.h
components/plugin-api/: CMakeLists.txt
components/plugin-api/include/: tanmatsu_plugin.h
components/tanmatsu-addon/: CMakeLists.txt  addon.c  idf_component.yml
components/tanmatsu-addon/include/: addon.h
components/tanmatsu-lora/: CMakeLists.txt  idf_component.yml  lora.c
components/tanmatsu-lora/include/: lora.h
components/timezone/: database.c
components/usb-host/: CMakeLists.txt  idf_component.yml
components/usb-host/include/: hid_keyboard.h
components/usb-host/src/: hid_keyboard.c
docs/: PLUGINAPIS.md
main/: CMakeLists.txt  Kconfig  addon.c  addon.h  app_favorite.c  app_favorite.h  app_management.c  app_management.h  app_metadata_parser.c  app_metadata_parser.h  appfs_settings.c  appfs_settings.h  arrays.c  arrays.h  audio_mixer.c  audio_mixer.h  bootloader_update.c  bootloader_update.h  chakrapetchmedium.c  chakrapetchmedium.h  coprocessor_management.c  coprocessor_management.h  device_information.c  device_information.h  device_settings.c  device_settings.h  esp_efuse_custom_table.c  esp_efuse_custom_table.csv  fastopen.c  filesystem_utils.c  filesystem_utils.h  global_event_handler.c  global_event_handler.h  http_download.c  http_download.h  icons.c  icons.h  idf_component.yml  lora.c  lora.h  (+32 more)
main/chat_database/: contacts.c  messages.c
main/chat_database/include/: chatdb_contacts.h  chatdb_location.h  chatdb_messages.h  chatdb_networks.h
main/common/: device.c  device.h  display.c  display.h  theme.c
main/hardware_test/: test_keyboard.c  test_keyboard_stuck_keys.c
main/include/: esp_efuse_custom_table.h
main/menu/: about.c  about.h  app_inspect.c  app_inspect.h  apps.c  apps.h  charging_mode.c  charging_mode.h  device_information.c  file_explorer.c  file_explorer.h  firmware_update.c  firmware_update.h  home.c  home.h  information.c  information.h  lora_information.c  lora_information.h  menu_brightness.c  menu_brightness.h  menu_device_information.c  menu_device_information.h  menu_filebrowser.c  menu_hardware_test.c  menu_helpers.c  menu_helpers.h  menu_lora_test.c  menu_lora_test.h  menu_plugins.c  menu_plugins.h  menu_power_information.c  menu_power_information.h  menu_repository_client.c  menu_repository_client.h  menu_repository_client_categories.c  menu_repository_client_categories.h  menu_repository_client_project.c  menu_repository_client_project.h  menu_rftest.c  (+47 more)
main/menu/chat/: chat.c  chat.h  chat_types.h  lora_presets.c  lora_presets.h  lora_settings.c  lora_settings.h  messages.c  messages.h
main/menu/texteditor/: editing.c  editing.h  menu.c  rendering.c  rendering.h  saving.c  saving.h  types.h
partition_tables/: .~lock.tanmatsu_16M.ods#  16M.csv  16M.ods  debug.csv  esp32p4-16mb.csv  esp32p4-16mb.ods  tanmatsu_16M.ods  tanmatsu_16M_bootloader_debug.ods
sdkconfigs/: esp32-p4-function-ev-board  esp32-p4-function-ev-board-lt8912b  general  hackaday2025  hackerhotel-2024  hackerhotel-2026  kami  konsool  mch2022  tanmatsu
tools/plugin-sdk/: plugin-build.cmake
tools/plugin-sdk/lib/: libplugin_stubs.c
