if (CONFIG_BSP_TARGET_TANMATSU)
list(APPEND files "tanmatsu_coprocessor.bin")
endif()

idf_component_register(
	SRCS
		"main.c"
		"common/display.c"
		"menu/home.c"
		"menu/settings.c"
		"menu/about.c"
		"menu/wifi.c"
		"menu/wifi_edit.c"
		"menu/apps.c"
		"menu/firmware_update.c"
		"menu/message_dialog.c"
		"menu/device_information.c"
		"menu/settings_clock.c"
		"menu/settings_clock_timezone.c"
		"menu/charging_mode.c"
		"chakrapetchmedium.c"
		"coprocessor_management.c"
		"wifi_remote.c"
		"wifi_ota.c"
		"icons.c"
		"usb_device.c"
		"badgelink/nanopb/pb_common.c"
		"badgelink/nanopb/pb_decode.c"
		"badgelink/nanopb/pb_encode.c"
		"badgelink/badgelink_appfs.c"
		"badgelink/badgelink_fs.c"
		"badgelink/badgelink_nvs.c"
		"badgelink/badgelink_startapp.c"
		"badgelink/badgelink.c"
		"badgelink/badgelink.pb.c"
		"badgelink/cobs.c"
		"esp_efuse_custom_table.c"
		"sdcard.c"
		"app_metadata_parser.c"
	PRIV_REQUIRES
		esp_lcd
		fatfs
		nvs_flash
		badge-bsp
		gui
		esp_wifi_remote
		esp_hosted
		wpa_supplicant
		esp_https_ota
		app_update
		esp_bootloader_format
		custom-certificates
		wifi-manager
		esp-tls
		pax-gfx
		pax-codecs
		efuse
		timezone
		json
	INCLUDE_DIRS
		"."
		"include"
		"badgelink/nanopb"
	EMBED_FILES
		${files}
)

fatfs_create_spiflash_image(fat fat FLASH_IN_PROJECT)
